--- a/Settings/settings.json
+++ b/Settings/settings.json
@@ -1,6 +1,7 @@
 {
     "workFolder": "Audit",
     "windowsEvent": {
+        "folder": "Events",
         "daysLastGetEvents": 30,
         "logs": [
             "Application",
